--- a/GraphicalTrain.css
+++ b/GraphicalTrain.css
@@ -6,7 +6,7 @@
 
 .train {
 	margin-left: 0%;
-	transition: margin-left 2s;
+	-webkit-transition: margin-left 2s;
 	display: inline-block;
 }
 
@@ -52,7 +52,7 @@
 	margin: 2px;
 	background-color: yellow;
 	border: 1px solid black;
-	transition: 2s;
+	-webkit-transition: 2s;
 }
 
 .emptyContainer{
